--- a/css/main.css
+++ b/css/main.css
@@ -15,4 +15,25 @@
       font-family: Helvetica;
   }
 
- 
+ #resetButton {
+    font-size: 1rem;
+    font-weight: bold;
+    padding: .7rem;
+    margin-top: 2rem;
+    border: 2px solid grey;
+    color: grey;
+    border-radius: .2rem;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    position:absolute;
+    bottom:10px;
+    left: 50%;
+ }
+
+#resetButton:hover {
+    background-color: rgb(248, 197, 191);
+    color: white;
+}
+
+/* today's work */
