--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 * {
     box-sizing: border-box;
     background-color: bisque;
-    /* margin-left: 3px; */
-    /* margin-right: 3px; */
+    margin-left: 10px; 
+    margin-right: 10px;
   }
 
   h1 {
